--- a/src/components/body/information/UserDetails.scss
+++ b/src/components/body/information/UserDetails.scss
@@ -66,7 +66,7 @@
     }
 
     &.hijri {
-      color: #ffffff99;
+      color: #ffffff;
       font-size: 22px;
 
       @media (max-width: 768px) {
