--- a/src/components/body/selfsurvices/SurvicesIcons.scss
+++ b/src/components/body/selfsurvices/SurvicesIcons.scss
@@ -13,7 +13,16 @@
   margin-left: auto;
 
   @media (max-width: 1024px) {
-    width: 50%;
+    width: auto;
+    height: auto;
+    flex-direction: row;
+    padding: 1rem;
+    border-radius: 10px;
+    margin: 0 auto;
+    gap: 1rem;
+  }
+  @media (max-width: 480px) {
+    width: auto;
     height: auto;
     flex-direction: row;
     padding: 1rem;
@@ -63,6 +72,7 @@
 
     @media (max-width: 480px) {
       gap: 15px;
+      
     }
 
     img {
