--- a/src/components/footer/Footer.scss
+++ b/src/components/footer/Footer.scss
@@ -2,18 +2,15 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  position: fixed;
-  bottom: 0;
-  left: 0;
-  right: 0;
   padding: 1rem 2rem;
-
+  width: 100%;
+  box-sizing: border-box;
+  margin-top: auto;
   
   @media (max-width: 768px) {
     padding: 1rem;
     flex-direction: column;
     gap: 1rem;
-
   }
 
   img {
