--- a/src/components/navbar/usersetting/UserSetting.scss
+++ b/src/components/navbar/usersetting/UserSetting.scss
@@ -20,7 +20,8 @@
   .icons-group {
     display: flex;
     gap: 1rem;
-    
+    position: relative;
+    z-index: 1;
     @media (max-width: 480px) {
       gap: 0.5rem;
       flex-wrap: wrap;
@@ -28,6 +29,8 @@
     }
     
     .MuiIconButton-root {
+      position: relative;
+      z-index: 1;
       color: white;
       background: rgba(255, 255, 255, 0.2);
       -webkit-backdrop-filter: blur(10px);
