--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -5,10 +5,14 @@
 body {
   margin: 0;
   padding: 0;
-  height: 100vh;
-  
+  min-height: 100vh;
   width: 100%;
   font-family: $default-font-family;
   transition: background-image 0.3s ease-in-out;
 
+}
+#root {
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
 }
